--- a/aptos-move/aptos-debugger/Cargo.toml
+++ b/aptos-move/aptos-debugger/Cargo.toml
@@ -8,6 +8,7 @@ homepage = "https://aptoslabs.com"
 license = "Apache-2.0"
 publish = false
 edition = "2021"
+default-run = "aptos-debugger"
 
 [dependencies]
 anyhow = { workspace = true }
@@ -24,6 +25,7 @@ aptos-validator-interface = { workspace = true }
 aptos-vm = { workspace = true }
 aptos-vm-logging = { workspace = true }
 aptos-vm-types = { workspace = true }
+bcs = { workspace = true }
 clap = { workspace = true }
 move-binary-format = { workspace = true }
 move-cli = { workspace = true }
@@ -33,5 +35,9 @@ move-resource-viewer = { workspace = true }
 move-table-extension = { workspace = true }
 move-vm-runtime = { workspace = true }
 move-vm-test-utils = { workspace = true }
+regex = { workspace = true }
 tokio = { workspace = true }
 url = { workspace = true }
+
+[[bin]]
+name = "bcs-txn-decoder"
