--- a/ecosystem/typescript/aptos-client/tsconfig.json
+++ b/ecosystem/typescript/aptos-client/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "display": "Client Implementation",
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "allowJs": true,
@@ -15,5 +16,5 @@
     "target": "es2020",
     "pretty": true
   },
-  "include": ["src", "packages/aptosClient/src"]
+  "include": ["src"]
 }
