--- a/consensus/Cargo.toml
+++ b/consensus/Cargo.toml
@@ -40,6 +40,7 @@ aptos-secure-storage = { workspace = true }
 aptos-short-hex-str = { workspace = true }
 aptos-storage-interface = { workspace = true }
 aptos-temppath = { workspace = true }
+aptos-time-service = { workspace = true }
 aptos-types = { workspace = true }
 aptos-vm = { workspace = true }
 arc-swap = { workspace = true }
